# mlops-image-classifier

./: .gitignore  README.md  main.py  mlflow.db  pyproject.toml  test_dataset.py  test_model.py
data/: processed.dvc  raw.dvc
src/: dataset.py  model.py  train.py
src/data/: make_subset.py
