[project]
name = "mlops-image-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.67.1",
    "matplotlib>=3.11.0",
    "mlflow>=3.14.0",
    "numpy>=2.5.0",
    "opencv-python>=5.0.0.93",
    "pandas>=2.3.3",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
]
